# toy-edge-worker

./: .gitignore  Cargo.toml  workers.toml
.github/workflows/: deploy-book.yml
crates/edged/: Cargo.toml
crates/edged/src/: main.rs  server.rs
crates/pool/: Cargo.toml
crates/pool/src/: lib.rs
crates/protocol/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/js/: bootstrap.js
crates/runtime/src/: error.rs  init.rs  lib.rs  limits.rs  ops.rs  worker.rs
docs/: book.toml  design.md
docs/book/: 01-introduction.md  02-isolate-model.md  03-architecture.md  04-v8-concepts.md  05-rusty-v8.md  06-esm-loading.md  07-bootstrap-and-ops.md  08-event-loop.md  09-request-lifecycle.md  10-http-server.md  11-multi-tenant.md  12-isolate-pool.md  13-cpu-limit.md  14-memory-limit.md  15-subrequest-fetch.md  16-conclusion.md  README.md  SUMMARY.md  appendix-a-v8-api.md  appendix-b-troubleshooting.md  appendix-c-commands.md
examples/workers/: echo.js  hello.js  loop.js  membomb.js  proxy.js
