[workspace]
resolver = "2"
members = [
    "crates/edged",
    "crates/runtime",
    "crates/pool",
    "crates/router",
    "crates/protocol",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = "0.12"
v8 = "149"

# v8 のリンクが重いので dev でも最適化を抑えめにしてビルド時間を優先する
[profile.dev]
debug = 1
